<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.jboss</groupId>
        <artifactId>jboss-parent</artifactId>
        <version>19</version>
    </parent>

    <groupId>org.jboss.windup.rules</groupId>
    <artifactId>windup-rulesets</artifactId>
    <version>3.0.0-SNAPSHOT</version>

    <name>Windup Rulesets</name>

    <properties>
        <windup.scm.connection>scm:git:https://github.com/windup/windup-rulesets.git</windup.scm.connection>
        <windup.developer.connection>scm:git:git@github.com:windup/windup-rulesets.git</windup.developer.connection>
        <windup.scm.url>http://github.com/windup/windup-rulesets</windup.scm.url>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>
        <version.windup>3.0.0-SNAPSHOT</version.windup>
    </properties>

    <scm>
        <tag>master</tag>
        <connection>${windup.scm.connection}</connection>
        <developerConnection>${windup.developer.connection}</developerConnection>
        <url>${windup.scm.url}</url>
    </scm>

    <issueManagement>
        <system>JBoss Jira</system>
        <url>https://issues.jboss.org/browse/WINDUP</url>
    </issueManagement>
    <mailingLists>
        <mailingList>
            <name>Windup Rules Development and Usage</name>
            <post>windup-users@lists.jboss.org</post>
            <archive>http://lists.jboss.org/pipermail/windup-users/</archive>
        </mailingList>
        <mailingList>
            <name>Windup Core Development</name>
            <post>windup-dev@lists.jboss.org</post>
            <archive>http://lists.jboss.org/pipermail/windup-dev/</archive>
        </mailingList>
    </mailingLists>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jboss.windup</groupId>
                <artifactId>windup-bom</artifactId>
                <version>${version.windup}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Windup deps -->
        <dependency>
            <groupId>org.jboss.windup.graph</groupId>
            <artifactId>windup-graph</artifactId>
            <classifier>forge-addon</classifier>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.windup.config</groupId>
            <artifactId>windup-config</artifactId>
            <classifier>forge-addon</classifier>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.windup.config</groupId>
            <artifactId>windup-config-xml</artifactId>
            <classifier>forge-addon</classifier>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.windup.utils</groupId>
            <artifactId>windup-utils</artifactId>
            <classifier>forge-addon</classifier>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.windup.reporting</groupId>
            <artifactId>windup-reporting</artifactId>
            <classifier>forge-addon</classifier>
            <scope>provided</scope>
        </dependency>

        <!-- Windup Rules Base -->
        <dependency>
            <groupId>org.jboss.windup.rules.apps</groupId>
            <artifactId>windup-rules-base</artifactId>
            <classifier>forge-addon</classifier>
        </dependency>

        <!-- Other rulesets. -->
        <dependency>
            <groupId>org.jboss.windup.rules.apps</groupId>
            <artifactId>windup-rules-java</artifactId>
            <classifier>forge-addon</classifier>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.windup.rules.apps</groupId>
            <artifactId>windup-rules-java-ee</artifactId>
            <classifier>forge-addon</classifier>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.windup.rules.apps</groupId>
            <artifactId>windup-rules-java-project</artifactId>
            <classifier>forge-addon</classifier>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.jboss.forge.furnace.container</groupId>
            <artifactId>cdi-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.forge.furnace.container</groupId>
            <artifactId>cdi</artifactId>
            <classifier>forge-addon</classifier>
            <scope>provided</scope>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>org.jboss.windup</groupId>
            <artifactId>windup-test-harness</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jboss.windup.exec</groupId>
            <artifactId>windup-exec</artifactId>
            <classifier>forge-addon</classifier>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    <profiles>
        <profile>
            <id>java7</id>
            <properties>
                <arguments>-Xms512m -Xmx2048m -XX:MaxPermSize=768m -XX:ReservedCodeCacheSize=128m</arguments>
            </properties>
            <activation>
                <jdk>1.7</jdk>
            </activation>
        </profile>
        <profile>
            <id>java8</id>
            <properties>
                <arguments>-Xms512m -Xmx2048m -XX:MaxMetaspaceSize=768m -XX:ReservedCodeCacheSize=128m</arguments>
            </properties>
            <activation>
                <jdk>1.8</jdk>
            </activation>
        </profile>
    </profiles>


    <build>
        <resources>
            <resource>
                <filtering>false</filtering>
                <directory>rules-reviewed</directory>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>Copy current ruleset schema from Windup core.</id>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.jboss.windup.config</groupId>
                                    <artifactId>windup-config-xml</artifactId>
                                    <version>${project.version}</version>
                                    <type>jar</type>
                                    <classifier>forge-addon</classifier>
                                    <includes>schema/*.xsd</includes>
                                    <outputDirectory>${project.build.directory}/xsd</outputDirectory>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Validate the rulesets XML files. -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>xml-maven-plugin</artifactId>
                <version>1.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>validate</goal>
                        </goals>
                        <phase>process-test-resources</phase>
                    </execution>
                </executions>
                <configuration>
                    <validationSets>
                        <validationSet>
                            <includes>
                                <include>**/*.windup.xml</include>
                                <include>**/*.windup.test.xml</include>
                            </includes>
                            <dir>rules-reviewed</dir>
                            <systemId>${project.build.directory}/xsd/schema/windup-jboss-ruleset.xsd</systemId>
                        </validationSet>
                    </validationSets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
               	<artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>${arguments}</argLine>
               	</configuration>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-jar-plugin</artifactId>
               <configuration>
                  <includes>
                     <include>**/*.windup.xml</include>
                     <include>**/*.technology.metadata.xml</include>
                     <include>**/*.windup.technologytransformer.xml</include>
                     <include>eap6/api-jars/*.jar</include>
                     <include>eap7/api-jars/*.jar</include>
                     <include>**/*.xsl</include>
                  </includes>
               </configuration>
            </plugin>            
        </plugins>
    </build>
</project>
